--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,9 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build-Mock",
+            "label": "Build-Local",
             "type": "npm",
-            "script": "build:mock"
+            "script": "build:local"
         },
         {
             "label": "Build-Azure",
