--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
         "node": ">=20.0.0"
     },
     "scripts": {
-        "build": "npm run build:agent:mock && npm run build:agent:azure && npm run build:agent:github",
+        "build": "npm run build:agent:local && npm run build:agent:azure && npm run build:agent:github",
         "format": "prettier --write src/**/*.ts",
         "format-check": "prettier --check src/**/*.ts",
-        "build:agent:mock": "webpack --config webpack.config.js --env agent=mock",
+        "build:agent:local": "webpack --config webpack.config.js --env agent=local",
         "build:agent:azure": "webpack --config webpack.config.js --env agent=azure",
         "build:agent:github": "webpack --config webpack.config.js --env agent=github",
         "publish:azure": "tfx extension publish --root ./dist/azure --no-wait-validation --auth-type pat"
