use common lib.js file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
         "paths": {
+            "@lib": [
+                "./tools/lib.ts"
+            ],
             "@agents/common": [
                 "./agents/common"
             ],
