--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 
         "run:local:gitversion": "node dist/tools/gitversion.js --buildAgent local",
         "run:azure:gitversion": "node dist/tools/gitversion.js --buildAgent azure",
-        "run:github:gitversion": "node dist/tools/gitversion.js --buildAgent github",
+        "cli:github:gitversion": "node dist/cli.js --buildAgent github --tool gitversion --command setup",
+        "run:github:gitversion": "node gitversion/setup/main.js",
 
         "run:local:gitreleasemanager": "node dist/local/gitreleasemanager.js --buildAgent local",
         "run:azure:gitreleasemanager": "node dist/azure/gitreleasemanager.js --buildAgent azure",
