include libs into the vsix

--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
         "build:agent:azure": "vite build --config src/agents/vite.config.ts --mode azure",
         "build:agent:github": "vite build --config src/agents/vite.config.ts --mode github",
 
-        "run:local:gitversion": "node dist/tools/gitversion.js --buildAgent local",
-        "run:azure:gitversion": "node dist/tools/gitversion.js --buildAgent azure",
-        "cli:github:gitversion": "node dist/cli.js --buildAgent github --tool gitversion --command setup",
+        "run:local:gitversion": "node dist/tools/gitversion.js --agent local",
+        "run:azure:gitversion": "node dist/tools/gitversion.js --agent azure",
+        "cli:github:gitversion": "node dist/cli.js --agent github --tool gitversion --command setup",
         "run:github:gitversion": "node gitversion/setup/main.js",
 
-        "run:local:gitreleasemanager": "node dist/local/gitreleasemanager.js --buildAgent local",
-        "run:azure:gitreleasemanager": "node dist/azure/gitreleasemanager.js --buildAgent azure",
-        "run:github:gitreleasemanager": "node dist/github/gitreleasemanager.js --buildAgent github",
+        "run:local:gitreleasemanager": "node dist/local/gitreleasemanager.js --agent local",
+        "run:azure:gitreleasemanager": "node dist/azure/gitreleasemanager.js --agent azure",
+        "run:github:gitreleasemanager": "node dist/github/gitreleasemanager.js --agent github",
 
         "test:tools": "vitest --run src/__tests__/tools --config src/__tests__/vitest.config.ts",
         "test:agents": "vitest --run src/__tests__/agents --config src/__tests__/vitest.config.ts",
