--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
         "format": "prettier --write 'src/**/*.ts'",
         "format-check": "prettier --check 'src/**/*.ts'",
 
-        "build:tools": "vite build --config src/tools/vite.config.ts",
+        "build:tools": "vite build --config src/tools/vite.config.mts",
         "build:agents": "run-p build:agent:local build:agent:azure build:agent:github",
 
-        "build:agent:local": "vite build --config src/agents/vite.config.ts --mode local-agent",
-        "build:agent:azure": "vite build --config src/agents/vite.config.ts --mode azure",
-        "build:agent:github": "vite build --config src/agents/vite.config.ts --mode github",
+        "build:agent:local": "vite build --config src/agents/vite.config.mts --mode local-agent",
+        "build:agent:azure": "vite build --config src/agents/vite.config.mts --mode azure",
+        "build:agent:github": "vite build --config src/agents/vite.config.mts --mode github",
 
         "run:local:gitversion": "node dist/tools/gitversion.js --agent local",
         "run:azure:gitversion": "node dist/tools/gitversion.js --agent azure",
@@ -34,10 +34,10 @@
         "run:azure:gitreleasemanager": "node dist/azure/gitreleasemanager.js --agent azure",
         "run:github:gitreleasemanager": "node dist/github/gitreleasemanager.js --agent github",
 
-        "test:tools": "vitest --run src/__tests__/tools --config src/__tests__/vitest.config.ts",
-        "test:agents": "vitest --run src/__tests__/agents --config src/__tests__/vitest.config.ts",
+        "test:tools": "vitest --run src/__tests__/tools --config src/__tests__/vitest.config.mts",
+        "test:agents": "vitest --run src/__tests__/agents --config src/__tests__/vitest.config.mts",
 
-        "publish:azure": "tfx extension publish --root ./dist/azure --no-wait-validation --auth-type pat"
+        "publish:azure": "tfx extension publish --root ./dist/azure --manifest-js dist/azure/manifest.config.cjs --no-wait-validation --auth-type pat"
     },
     "devDependencies": {
         "@types/node": "^20.14.8",
