use local extension for pipelines

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -44,6 +44,9 @@ jobs:
         npm run build:tools
         npm run build:agent:github
         npm run build:agent:azure
+
+        npx tfx extension create --root ./dist/azure --manifest-js ./dist/azure/manifest.config.cjs
+        Expand-Archive -Path gittools.gittools-0.0.1.vsix -DestinationPath dist/vsix
       displayName: 'Build code'
     - pwsh: |
         # set the inputs for the 'gitversion/setup' action
@@ -53,9 +56,9 @@ jobs:
         $env:INPUT_PREFERLATESTVERSION = "$(INPUT_PREFERLATESTVERSION)"
 
         # run the 'gitversion/setup' action
-        node gitversion.js --buildAgent azure --command setup
+        node gitversion/setup/main.js
       displayName: gitversion/setup
-      workingDirectory: dist/tools
+      workingDirectory: dist/vsix
     - pwsh: |
         # set the inputs for the 'gitversion/execute' action
         $env:INPUT_TARGETPATH = './'
@@ -64,10 +67,10 @@ jobs:
         $env:INPUT_OVERRIDECONFIG = '
           update-build-number=false'
         # run the 'gitversion/execute' action
-        node gitversion.js --buildAgent azure --command execute
+        node gitversion/execute/main.js
       name: version
       displayName: gitversion/execute
-      workingDirectory: dist/tools
+      workingDirectory: dist/vsix
     - pwsh: |
         echo "Major      (major)                         : $(major)"
         echo "Major      (GitVersion_Major)              : $(GitVersion_Major)"
