use mjs extension

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -56,7 +56,7 @@ jobs:
         $env:INPUT_PREFERLATESTVERSION = "$(INPUT_PREFERLATESTVERSION)"
 
         # run the 'gitversion/setup' action
-        node gitversion/setup/main.js
+        node gitversion/setup/main.mjs
       displayName: gitversion/setup
       workingDirectory: dist/vsix
     - pwsh: |
@@ -67,7 +67,7 @@ jobs:
         $env:INPUT_OVERRIDECONFIG = '
           update-build-number=false'
         # run the 'gitversion/execute' action
-        node gitversion/execute/main.js
+        node gitversion/execute/main.mjs
       name: version
       displayName: gitversion/execute
       workingDirectory: dist/vsix
