--- a/gitreleasemanager/setup/action.yml
+++ b/gitreleasemanager/setup/action.yml
@@ -6,7 +6,7 @@ branding:
   icon: git-pull-request
 runs:
   using: node20
-  main: main.js
+  main: main.mjs
 inputs:
   versionSpec:
     description: Required version in the form of 0.17.x or exact version like 0.17.0
