--- a/gitversion/execute/action.yml
+++ b/gitversion/execute/action.yml
@@ -6,7 +6,7 @@ branding:
   icon: git-pull-request
 runs:
   using: node20
-  main: main.js
+  main: main.mjs
 inputs:
   targetPath:
     description: Optionally supply the path to the working directory
