--- a/package.json
+++ b/package.json
@@ -1,69 +1,70 @@
 {
-    "name": "gittools-actions",
-    "version": "2.0.0",
-    "description": "Easy Semantic Versioning (https://semver.org) for projects using Git",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/GitTools/actions.git"
-    },
-    "type": "module",
-    "module": "ES2022",
-    "engines": {
-        "node": ">=20.0.0"
-    },
-    "scripts": {
-        "build": "run-p build:tools build:agents",
-        "test": "run-p test:tools test:agents",
-        "lint": "eslint --ext .ts src",
-        "format": "prettier --write 'src/**/*.ts'",
-        "format-check": "prettier --check 'src/**/*.ts'",
+  "name": "gittools-actions",
+  "version": "2.0.0",
+  "description": "Easy Semantic Versioning (https://semver.org) for projects using Git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/GitTools/actions.git"
+  },
+  "type": "module",
+  "module": "ES2022",
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "scripts": {
+    "build": "run-p build:tools build:agents",
+    "test": "run-p test:tools test:agents",
+    "lint": "eslint --ext .ts src",
+    "lint-fix": "eslint --ext .ts src --fix",
+    "format": "prettier --write 'src/**/*.ts'",
+    "format-check": "prettier --check 'src/**/*.ts'",
 
-        "build:tools": "vite build --config src/tools/vite.config.mts",
-        "build:agents": "run-p build:agent:local build:agent:azure build:agent:github",
-      
-        "build:agent:local": "vite build --config src/agents/vite.config.mts --mode local-agent",
-        "build:agent:azure": "vite build --config src/agents/vite.config.mts --mode azure",
-        "build:agent:github": "vite build --config src/agents/vite.config.mts --mode github",
+    "build:tools": "vite build --config src/tools/vite.config.mts",
+    "build:agents": "run-p build:agent:local build:agent:azure build:agent:github",
 
-        "run:local:gitversion": "node dist/tools/cli.mjs --tool gitversion --agent local",
-        "run:azure:gitversion": "node dist/tools/cli.mjs --tool gitversion --agent azure",
-        "run:github:gitversion": "node dist/tools/cli.mjs --tool gitversion --agent github",
+    "build:agent:local": "vite build --config src/agents/vite.config.mts --mode local-agent",
+    "build:agent:azure": "vite build --config src/agents/vite.config.mts --mode azure",
+    "build:agent:github": "vite build --config src/agents/vite.config.mts --mode github",
 
-        "run:local:gitreleasemanager": "node dist/tools/cli.mjs --tool gitreleasemanager --agent local",
-        "run:azure:gitreleasemanager": "node dist/tools/cli.mjs --tool gitreleasemanager --agent azure",
-        "run:github:gitreleasemanager": "node dist/tools/cli.mjs --tool gitreleasemanager --agent github",
+    "run:local:gitversion": "node dist/tools/cli.mjs --tool gitversion --agent local",
+    "run:azure:gitversion": "node dist/tools/cli.mjs --tool gitversion --agent azure",
+    "run:github:gitversion": "node dist/tools/cli.mjs --tool gitversion --agent github",
 
-        "test:tools": "vitest --run src/__tests__/tools --config src/__tests__/vitest.config.mts",
-        "test:agents": "vitest --run src/__tests__/agents --config src/__tests__/vitest.config.mts",
+    "run:local:gitreleasemanager": "node dist/tools/cli.mjs --tool gitreleasemanager --agent local",
+    "run:azure:gitreleasemanager": "node dist/tools/cli.mjs --tool gitreleasemanager --agent azure",
+    "run:github:gitreleasemanager": "node dist/tools/cli.mjs --tool gitreleasemanager --agent github",
 
-        "publish:prepare": "./dist/azure/updateTasks.mjs",
-        "publish:azure": "tfx extension publish --root ./dist/azure --manifest-js dist/azure/manifest.config.cjs --no-wait-validation --auth-type pat"
-    },
-    "devDependencies": {
-        "@types/node": "^20.14.8",
-        "@types/semver": "^7.5.8",
-        "@typescript-eslint/eslint-plugin": "^7.16.0",
-        "dotenv": "^16.4.5",
-        "eslint": "^8.57.0",
-        "eslint-config-love": "^54.0.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-github": "^5.0.1",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-n": "^17.9.0",
-        "eslint-plugin-prettier": "^5.1.3",
-        "eslint-plugin-promise": "^6.1.1",
-        "eslint-plugin-vitest": "^0.3.26",
-        "glob": "^11.0.0",
-        "npm-run-all2": "^6.2.0",
-        "prettier": "^3.3.2",
-        "tfx-cli": "^0.17.0",
-        "typescript": "^5.5.2",
-        "vite": "^5.3.1",
-        "vite-node": "^2.0.1",
-        "vite-tsconfig-paths": "^4.3.2",
-        "vitest": "^2.0.1"
-    },
-    "dependencies": {
-        "semver": "^7.6.2"
-    }
+    "test:tools": "vitest --run src/__tests__/tools --config src/__tests__/vitest.config.mts",
+    "test:agents": "vitest --run src/__tests__/agents --config src/__tests__/vitest.config.mts",
+
+    "publish:prepare": "./dist/azure/updateTasks.mjs",
+    "publish:azure": "tfx extension publish --root ./dist/azure --manifest-js dist/azure/manifest.config.cjs --no-wait-validation --auth-type pat"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.8",
+    "@types/semver": "^7.5.8",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-config-love": "^54.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-github": "^5.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^17.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vitest": "^0.3.26",
+    "glob": "^11.0.0",
+    "npm-run-all2": "^6.2.0",
+    "prettier": "^3.3.2",
+    "tfx-cli": "^0.17.0",
+    "typescript": "^5.5.2",
+    "vite": "^5.3.1",
+    "vite-node": "^2.0.1",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^2.0.1"
+  },
+  "dependencies": {
+    "semver": "^7.6.2"
+  }
 }
