--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "run:azure:gitreleasemanager": "node dist/tools/cli.mjs --tool gitreleasemanager --agent azure",
     "run:github:gitreleasemanager": "node dist/tools/cli.mjs --tool gitreleasemanager --agent github",
 
-    "test:tools": "vitest --run src/__tests__/tools --config src/__tests__/vitest.config.mts",
-    "test:agents": "vitest --run src/__tests__/agents --config src/__tests__/vitest.config.mts",
+    "test:tools": "vitest --run src/__tests__/tools --config src/__tests__/vitest.config.ts",
+    "test:agents": "vitest --run src/__tests__/agents --config src/__tests__/vitest.config.ts",
 
     "publish:prepare": "./dist/azure/updateTasks.mjs",
     "publish:azure": "tfx extension publish --root ./dist/azure --manifest-js dist/azure/manifest.config.cjs --no-wait-validation --auth-type pat"
@@ -52,14 +52,14 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^17.9.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vitest": "^0.3.26",
+    "eslint-plugin-promise": "^6.4.0",
+    "eslint-plugin-vitest": "^0.4.1",
     "glob": "^11.0.0",
-    "npm-run-all2": "^6.2.0",
+    "npm-run-all2": "^6.2.2",
     "prettier": "^3.3.2",
     "tfx-cli": "^0.17.0",
-    "typescript": "^5.5.2",
-    "vite": "^5.3.1",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.3",
     "vite-node": "^2.0.1",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.0.1"
