--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "test": "run-p test:tools test:agents",
     "lint": "eslint --ext .ts src",
     "lint-fix": "eslint --ext .ts src --fix",
-    "format": "prettier --write 'src/**/*.ts'",
-    "format-check": "prettier --check 'src/**/*.ts'",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "format-check": "prettier --check \"src/**/*.ts\"",
 
     "build:tools": "vite build --config src/tools/vite.config.mts",
     "build:agents": "run-p build:agent:local build:agent:azure build:agent:github",
