--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -40,7 +40,12 @@ jobs:
       fetchDepth: '0'
     - pwsh: |
         npm install
+      displayName: 'Install dependencies'
+    - pwsh: |
+        npm run lint
         npm run format-check
+      displayName: 'Check code formatting'
+    - pwsh: |
         npm run build:tools
         npm run build:agent:github
         npm run build:agent:azure
