--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -42,8 +42,8 @@ jobs:
         npm install
       displayName: 'Install dependencies'
     - pwsh: |
-        npm run lint
-        npm run format-check
+        npm run lint:check
+        npm run format:check
       displayName: 'Check code formatting'
     - pwsh: |
         npm run build:tools
