--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,7 @@ jobs:
         npm install
       name: Install dependencies
     - run: |
-        npm run lint:check
-        npm run format:check
+        npm run lint:check && npm run format:check
       name: Check code formatting
     - run: |
         npm run build:tools
