include tests as part of the pipeline run

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -70,11 +70,15 @@ jobs:
         $env:INPUT_DISABLENORMALIZATION = 'false'
         $env:INPUT_OVERRIDECONFIG = '
           update-build-number=false'
+
         # run the 'gitversion/execute' action
         node gitversion/execute/main.mjs
       name: version
       displayName: gitversion/execute
       workingDirectory: dist/vsix
+    - pwsh: |
+        npm run test
+      displayName: 'Run tests'
     - pwsh: |
         echo "Major      (major)                         : $(major)"
         echo "Major      (GitVersion_Major)              : $(GitVersion_Major)"
