show test summary in GitHub Actions

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -77,7 +77,7 @@ jobs:
       displayName: gitversion/execute
       workingDirectory: dist/vsix
     - pwsh: |
-        npm run test
+        npm run test:ci
       displayName: 'Run tests'
     - pwsh: |
         echo "Major      (major)                         : $(major)"
