show test summary in Azure Pipelines

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -79,6 +79,10 @@ jobs:
     - pwsh: |
         npm run test:ci
       displayName: 'Run tests'
+    - task: PublishTestResults@2
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: 'junit-report.xml'
     - pwsh: |
         echo "Major      (major)                         : $(major)"
         echo "Major      (GitVersion_Major)              : $(GitVersion_Major)"
