add group dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,12 @@ updates:
   schedule:
     interval: daily
 - package-ecosystem: npm
+  groups:
+    vite:
+      patterns:
+        - "vite"
+        - "vite-node"
+        - "vitest"
   directory: "/"
   schedule:
     interval: daily
