exclude eslint-plugin-vitest fromn the `eslint` group until upgrade to 9.x

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,6 +24,8 @@ updates:
         - "eslint"
         - "eslint-plugin-*"
         - "eslint-config-*"
+      exclude-patterns:
+        - "eslint-plugin-vitest"
   directory: "/"
   schedule:
     interval: daily
