--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -42,7 +42,7 @@ jobs:
         npm install
       displayName: 'Install dependencies'
     - pwsh: |
-        npm run lint:check && npm run format:check
+        npm run lint:check && npm run format:check && npm run mdlint:check
       displayName: 'Check code formatting'
     - pwsh: |
         npm run build:tools
