--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -72,6 +72,24 @@ jobs:
       displayName: gitversion/setup
       workingDirectory: dist/vsix
     - pwsh: |
+        # set the inputs for the 'gitversion/command' action
+        $env:INPUT_TARGETPATH = './'
+        $env:INPUT_ARGUMENTS = '/showvariable FullSemVer'
+
+        # run the 'gitversion/command' action
+        node gitversion/command/main.mjs
+      displayName: gitversion/command (showvariable)
+      workingDirectory: dist/vsix
+    - pwsh: |
+        # set the inputs for the 'gitversion/command' action
+        $env:INPUT_TARGETPATH = './'
+        $env:INPUT_ARGUMENTS = '/format {Major}.{Minor}'
+
+        # run the 'gitversion/command' action
+        node gitversion/command/main.mjs
+      displayName: gitversion/command (format)
+      workingDirectory: dist/vsix
+    - pwsh: |
         # set the inputs for the 'gitversion/execute' action
         $env:INPUT_TARGETPATH = './'
         $env:INPUT_DISABLECACHE = 'true'
