--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,14 @@ jobs:
       uses: ./gitversion/setup
       with:
         versionSpec: '6.x'
+    - name: gitversion/command (showvariable)
+      uses: ./gitversion/command
+      with:
+        arguments: '/showvariable FullSemVer'
+    - name: gitversion/command (format)
+      uses: ./gitversion/command
+      with:
+        arguments: '/format {Major}.{Minor}'
     - name: gitversion/execute
       id: gitversion # step id used as reference for output values
       uses: ./gitversion/execute
