move test execution after build

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -53,6 +53,14 @@ jobs:
         Expand-Archive -Path gittools.gittools-0.0.1.vsix -DestinationPath dist/vsix
       displayName: 'Build code'
     - pwsh: |
+        npm run test:ci
+      displayName: 'Run tests'
+    - task: PublishTestResults@2
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: 'junit-report.xml'
+      displayName: 'Test Summary'
+    - pwsh: |
         # set the inputs for the 'gitversion/setup' action
         $env:INPUT_VERSIONSPEC = "$(INPUT_VERSIONSPEC)"
         $env:INPUT_INCLUDEPRERELEASE = "$(INPUT_INCLUDEPRERELEASE)"
@@ -76,13 +84,6 @@ jobs:
       name: version
       displayName: gitversion/execute
       workingDirectory: dist/vsix
-    - pwsh: |
-        npm run test:ci
-      displayName: 'Run tests'
-    - task: PublishTestResults@2
-      inputs:
-        testResultsFormat: 'JUnit'
-        testResultsFiles: 'junit-report.xml'
     - pwsh: |
         echo "Major      (major)                         : $(major)"
         echo "Major      (GitVersion_Major)              : $(GitVersion_Major)"
