--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,9 +57,16 @@ jobs:
           "oldTag=$oldTag" >> $env:GITHUB_OUTPUT
           "newTag=$newTag" >> $env:GITHUB_OUTPUT
       - uses: peter-evans/repository-dispatch@v3
-        name: Trigger Update Examples version
+        name: Trigger Update Examples version (actions)
         with:
           token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
           repository: ${{ github.repository }}
+          event-type: update-examples
+          client-payload: '{"oldTag": "${{ steps.get-tags.outputs.oldTag }}", "newTag": "${{ steps.get-tags.outputs.newTag }}"}'
+      - uses: peter-evans/repository-dispatch@v3
+        name: Trigger Update Examples version (actions-test)
+        with:
+          token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
+          repository: ${{ github.repository_owner }}/actions-test
           event-type: update-examples
           client-payload: '{"oldTag": "${{ steps.get-tags.outputs.oldTag }}", "newTag": "${{ steps.get-tags.outputs.newTag }}"}'
