#1164 - migrate to eslint 9

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "scripts": {
     "build": "run-p build:tools build:agents",
     "test": "run-p test:tools test:agents",
-    "lint:check": "eslint --ext .ts src",
-    "lint:fix": "eslint --ext .ts src --fix",
+    "lint:check": "eslint src",
+    "lint:fix": "eslint src --fix",
     "format:check": "prettier --check \"src/**/*.ts\"",
     "format:fix": "prettier --write \"src/**/*.ts\"",
     "mdlint:check": "markdownlint docs dist",
@@ -46,19 +46,16 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "@stylistic/eslint-plugin": "^2.6.4",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.5.1",
     "@types/semver": "^7.5.8",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@vitest/eslint-plugin": "^1.1.0",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.0",
-    "eslint-config-love": "^63.0.0",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-github": "^5.0.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^17.10.2",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-vitest": "^0.5.4",
     "glob": "^11.0.0",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
@@ -68,6 +65,7 @@
     "simple-git": "^3.25.0",
     "tfx-cli": "^0.17.0",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2",
     "vite-node": "^2.0.5",
     "vite-tsconfig-paths": "^5.0.1",
