--- a/gitreleasemanager/publish/action.yml
+++ b/gitreleasemanager/publish/action.yml
@@ -28,3 +28,8 @@ inputs:
     description: The directory on which GitReleaseManager should be executed. Defaults to current directory
     required: false
     default: ''
+  logFilePath:
+    description: Path to where log file should be created. Defaults to logging to console.
+    required: false
+    default: ''
+
