--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ windows-latest, ubuntu-latest, macos-13, macos-14 ]
+        os: [ windows-latest, ubuntu-latest, macos-15 ]
       fail-fast: false
     steps:
     - uses: actions/checkout@v4
