include stdout and stderr in the output of the tools

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -27,7 +27,7 @@ jobs:
       'ubuntu-latest':
         imageName: 'ubuntu-latest'
       'macos-latest':
-        imageName: 'macos-latest'
+        imageName: 'macos-15'
       'windows-latest':
         imageName: 'windows-latest'
 
