Enhance release workflow with GitReleaseManager steps
Added steps to update release notes, add assets, and close releases using GitReleaseManager in the release workflow. Refactored Azure extension publish process by splitting it into local creation and marketplace publishing. Updated `package.json` to support the new Azure publish steps.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "test:agents": "vitest --run src/__tests__/agents --config src/__tests__/vitest.config.ts",
 
     "publish:prepare": "./dist/azure/updateTasks.mjs",
-    "publish:azure": "tfx extension publish --root ./dist/azure --manifest-js dist/azure/manifest.config.cjs --auth-type pat",
+    "publish:azure:local": "tfx extension create --root ./dist/azure --manifest-js dist/azure/manifest.config.cjs",
+    "publish:azure:marketplace": "tfx extension publish --root ./dist/azure --manifest-js dist/azure/manifest.config.cjs --auth-type pat",
 
     "prepare": "husky"
   },
