add possibility to generate test Azdo extension on prerelease

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
           isPreRelease: ${{ github.event.release.prerelease }}
           targetcommitish: "main"
       - run: |
-          if (${{ github.event.release.prerelease }}) {
+          if ('${{ github.event.release.prerelease }}' -eq 'true') {
               $mode = "test"
           } else {
               $mode = "prod"
