Add separate workflow for prerelease builds
Split prerelease logic into its own workflow file, simplifying the release workflow to handle only final releases. Updated the Azure publish action to include an output for the generated VSIX file, aligning with the new workflows.

--- a/.github/actions/publish-azure/action.yml
+++ b/.github/actions/publish-azure/action.yml
@@ -17,6 +17,10 @@ inputs:
     description: 'Token for Azure DevOps'
     required: true
 
+outputs:
+  vsix:
+    description: 'Path to the generated VSIX file'
+
 runs:
   using: 'composite'
   steps:
