--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -42,3 +42,10 @@ jobs:
           minor: ${{ steps.gitversion.outputs.minor }}
           patch: ${{ steps.gitversion.outputs.patch }}
           token: ${{ secrets.TFX_TOKEN }}
+      - name: Trigger Update Examples version (actions-test)
+        id: get-tags
+        uses: ./.github/actions/trigger-action-test
+        with:
+          mode: 'test'
+          majorMinorPatch: ${{ steps.gitversion.outputs.majorMinorPatch }}
+          token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
