--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,30 +72,17 @@ jobs:
           owner: ${{ github.repository_owner }}
           repository: actions
           milestone: "v${{ steps.gitversion.outputs.majorMinorPatch }}"
-      - name: Get tags
+      - name: Trigger Update Examples version (actions-test)
         id: get-tags
-        shell: pwsh
-        run: |
-          # Finding the version from release tag
-
-          $newTag = "${{steps.gitversion.outputs.majorMinorPatch}}"
-          $oldTag = cat package.json | ConvertFrom-Json | Select-Object -ExpandProperty version
-          echo "Old tag: $oldTag"
-          echo "New tag: $newTag"
-
-          "oldTag=$oldTag" >> $env:GITHUB_OUTPUT
-          "newTag=$newTag" >> $env:GITHUB_OUTPUT
-      - uses: peter-evans/repository-dispatch@v3
-        name: Trigger Update Examples version (actions)
+        uses: ./.github/actions/trigger-action-test
+        with:
+          mode: 'prod'
+          majorMinorPatch: ${{ steps.gitversion.outputs.majorMinorPatch }}
+          token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
+      - name: Trigger Update Examples version (actions)
+        uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
           repository: ${{ github.repository }}
-          event-type: update-examples
-          client-payload: '{"oldTag": "${{ steps.get-tags.outputs.oldTag }}", "newTag": "${{ steps.get-tags.outputs.newTag }}"}'
-      - uses: peter-evans/repository-dispatch@v3
-        name: Trigger Update Examples version (actions-test)
-        with:
-          token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
-          repository: ${{ github.repository_owner }}/actions-test
           event-type: update-examples
           client-payload: '{"oldTag": "${{ steps.get-tags.outputs.oldTag }}", "newTag": "${{ steps.get-tags.outputs.newTag }}"}'
